# Lattice

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.peer  Dockerfile.store  LICENSE-MIT  Makefile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  lattice-peer.example.toml  lattice-store.example.toml  nextim-peer.example.toml  nextim-store.example.toml  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/lattice/demo/: MainActivity.kt
android/app/src/main/java/com/nextim/demo/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/scripts/: build-ffi.sh
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: device.rs  error.rs  exchange.rs  lib.rs  room.rs
crates/lattice-core/src/traits/: mod.rs  search.rs  storage.rs  transport.rs
crates/lattice-crypto/: Cargo.toml
crates/lattice-crypto-olm/: Cargo.toml
crates/lattice-crypto-olm/src/: group_session.rs  key_distribution.rs  lib.rs  megolm.rs  session.rs
crates/lattice-crypto/src/: identity.rs  lib.rs  sign.rs  trust.rs
crates/lattice-discovery/: Cargo.toml
crates/lattice-discovery/src/: dht.rs  identity_card.rs  lib.rs  service.rs
crates/lattice-ffi/: Cargo.toml  build.rs
crates/lattice-ffi/src/: lattice.udl  lib.rs
crates/lattice-peer/: Cargo.toml
crates/lattice-peer/src/: api.rs  cache.rs  lib.rs  main.rs  relay.rs
crates/lattice-proto/: Cargo.toml  build.rs
crates/lattice-proto/src/: lib.rs
crates/lattice-search-tantivy/: Cargo.toml
crates/lattice-search-tantivy/src/: lib.rs
crates/lattice-storage/: Cargo.toml
crates/lattice-storage-sqlite/: Cargo.toml
crates/lattice-storage-sqlite/src/: sqlite.rs
crates/lattice-storage/src/: cjk_tokenizer.rs  sqlite.rs  tantivy_search.rs
crates/lattice-store/: Cargo.toml
crates/lattice-store/src/: api.rs  lib.rs  main.rs  noop_search.rs  server.rs
crates/lattice-tests/: Cargo.toml
crates/lattice-tests/src/: lib.rs  store_api.rs  store_communication.rs
crates/lattice-transport/: Cargo.toml
crates/lattice-transport-ws/: Cargo.toml
crates/lattice-transport-ws/src/: websocket.rs
crates/nextim-core/: Cargo.toml
crates/nextim-core/src/: dag.rs  device.rs  error.rs  exchange.rs  lib.rs  rate_limiter.rs  room.rs
crates/nextim-core/src/traits/: mod.rs  search.rs  storage.rs
crates/nextim-crypto/: Cargo.toml
crates/nextim-crypto/src/: group_session.rs  identity.rs  lib.rs  megolm.rs  olm.rs  session.rs  sign.rs  trust.rs
crates/nextim-discovery/: Cargo.toml
crates/nextim-discovery/src/: dht.rs  identity_card.rs  lib.rs  service.rs
crates/nextim-ffi/: Cargo.toml  build.rs
crates/nextim-ffi/src/: lib.rs  nextim.udl
crates/nextim-peer/: Cargo.toml
crates/nextim-peer/src/: api.rs  main.rs  observability.rs  relay.rs  stun.rs
crates/nextim-proto/: Cargo.toml  build.rs
crates/nextim-proto/src/: lib.rs
crates/nextim-storage/: Cargo.toml
crates/nextim-storage/src/: lib.rs  sqlite.rs  tantivy_search.rs
crates/nextim-store/: Cargo.toml
crates/nextim-store/src/: api.rs  lib.rs  main.rs  server.rs
crates/nextim-tests/: Cargo.toml
crates/nextim-tests/src/: lib.rs  store_api.rs  store_communication.rs
crates/nextim-transport/: Cargo.toml
crates/nextim-transport/src/: websocket.rs
docs/: api.md  deployment.md  development.md  lattice-architecture.excalidraw  nextim-architecture.excalidraw
docs/brainstorms/: 2026-03-17-lattice-architecture-brainstorm.md  2026-03-17-nextim-architecture-brainstorm.md
docs/plans/: 2026-03-18-feat-lattice-implementation-plan.md  2026-03-18-feat-nextim-implementation-plan.md  2026-06-04-design-message-integrity-dag.md  2026-06-06-matrix-gap-and-roadmap.md  2026-06-07-design-e2ee-runtime.md
docs/prompt/: start.md
proto/: discovery.proto  group.proto  identity.proto  message.proto  transport.proto
scripts/: backup.sh  restore.sh
web/: .htaccess  CHANGELOG.md  DEPLOYMENT.md  FEATURES.md  README.md  index-new.html  index-redirect.html  index.html  nginx.conf  package.json  quickstart.html  test.html
web/chat/: .gitignore  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT.md  INDEX.md  QUICKSTART.md  README.md  README_CN.md  demo.html  index.html  package.json  test.html
web/chat/css/: extensions.css  style.css
web/chat/js/: app.js  chat.js  contacts.js  rooms.js  settings.js  shortcuts.js  utils.js
web/peer-monitor/: README.md  index.html  styles.css
web/peer-monitor/js/: api.js  app.js  cache.js  charts.js  connections.js  dashboard.js  performance.js
web/store-admin/: .editorconfig  API.md  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  README_CN.md  index.html  package.json  test.html
web/store-admin/css/: style.css
web/store-admin/js/: api.js  app.js  charts.js  config.js  contacts.js  dashboard.js  logs.js  messages.js  rooms.js
