[workspace]
resolver = "2"
members = [
    "crates/lattice-proto",
    "crates/lattice-crypto",
    "crates/lattice-crypto-olm",
    "crates/lattice-core",
    "crates/lattice-transport-ws",
    "crates/lattice-storage-sqlite",
    "crates/lattice-search-tantivy",
    "crates/lattice-store",
    "crates/lattice-peer",
    "crates/lattice-ffi",
    "crates/lattice-tests",
    "crates/lattice-discovery",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Protobuf
prost = "0.13"
prost-types = "0.13"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 加密
vodozemac = { version = "0.9", default-features = false }
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
rand = "0.8"
zeroize = "1"

# 传输
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# 存储
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.25"

# HTTP (Store API)
axum = "0.7"

# 工具
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
hex = "0.4"
uniffi = "0.31"

# 基准测试
criterion = { version = "0.5", features = ["html_reports"] }
