[package]
name = "lattice-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
lattice-proto = { path = "../lattice-proto" }
lattice-core = { path = "../lattice-core" }
vodozemac.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
zeroize.workspace = true
base64.workspace = true
hex.workspace = true
thiserror.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
