[package]
name = "lattice-peer"
version.workspace = true
edition.workspace = true

[dependencies]
lattice-proto = { path = "../lattice-proto" }
lattice-core = { path = "../lattice-core" }
lattice-crypto = { path = "../lattice-crypto" }
lattice-transport = { path = "../lattice-transport" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
prost.workspace = true
futures-util = "0.3"
tokio-tungstenite.workspace = true
rand.workspace = true
thiserror.workspace = true
toml = "0.8"
serde.workspace = true
axum.workspace = true
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde_json.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
ed25519-dalek.workspace = true
