[package]
name = "lattice-storage"
version.workspace = true
edition.workspace = true

[dependencies]
lattice-proto = { path = "../lattice-proto" }
lattice-core = { path = "../lattice-core" }
rusqlite.workspace = true
tantivy.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
