[package]
name = "lattice-store"
version.workspace = true
edition.workspace = true

[dependencies]
lattice-proto = { path = "../lattice-proto" }
lattice-core = { path = "../lattice-core" }
lattice-crypto = { path = "../lattice-crypto" }
lattice-crypto-olm = { path = "../lattice-crypto-olm" }
lattice-transport-ws = { path = "../lattice-transport-ws" }
lattice-storage-sqlite = { path = "../lattice-storage-sqlite" }
lattice-search-tantivy = { path = "../lattice-search-tantivy" }
lattice-discovery = { path = "../lattice-discovery" }
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
uuid.workspace = true
futures-util = "0.3"
tokio-tungstenite.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
toml = "0.8"
base64.workspace = true
ed25519-dalek.workspace = true
