[package]
name = "lattice-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
lattice-store = { path = "../lattice-store" }
lattice-proto = { path = "../lattice-proto" }
lattice-core = { path = "../lattice-core" }
lattice-crypto = { path = "../lattice-crypto" }
lattice-crypto-olm = { path = "../lattice-crypto-olm" }
lattice-transport-ws = { path = "../lattice-transport-ws" }
lattice-storage-sqlite = { path = "../lattice-storage-sqlite" }
lattice-search-tantivy = { path = "../lattice-search-tantivy" }
tokio.workspace = true
prost.workspace = true
futures-util = "0.3"
tokio-tungstenite.workspace = true
vodozemac.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json"] }
axum.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
uuid.workspace = true
base64.workspace = true
tempfile = "3"
