[package]
name = "nextim-discovery"
version.workspace = true
edition.workspace = true

[dependencies]
nextim-proto = { path = "../nextim-proto" }
nextim-core = { path = "../nextim-core" }
nextim-crypto = { path = "../nextim-crypto" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
prost.workspace = true
futures-util = "0.3"
tokio-tungstenite.workspace = true
