[package]
name = "nextim-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
nextim-core = { path = "../nextim-core" }
nextim-crypto = { path = "../nextim-crypto" }
nextim-transport = { path = "../nextim-transport" }
nextim-storage = { path = "../nextim-storage" }
nextim-proto = { path = "../nextim-proto" }
tokio.workspace = true
uniffi.workspace = true
prost.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
