[package]
name = "nextim-peer"
version.workspace = true
edition.workspace = true

[dependencies]
nextim-proto = { path = "../nextim-proto" }
nextim-core = { path = "../nextim-core" }
nextim-crypto = { path = "../nextim-crypto" }
nextim-transport = { path = "../nextim-transport" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
prost.workspace = true
futures-util = "0.3"
tokio-tungstenite.workspace = true
rand.workspace = true
thiserror.workspace = true
toml = "0.8"
serde.workspace = true
axum.workspace = true
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde_json.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
ed25519-dalek.workspace = true
