[package]
name = "nextim-storage"
version.workspace = true
edition.workspace = true

[dependencies]
nextim-proto = { path = "../nextim-proto" }
nextim-core = { path = "../nextim-core" }
rusqlite.workspace = true
tantivy.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
