[package]
name = "nextim-transport"
version.workspace = true
edition.workspace = true

[dependencies]
nextim-proto = { path = "../nextim-proto" }
nextim-core = { path = "../nextim-core" }
tokio.workspace = true
tokio-tungstenite.workspace = true
prost.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-util = "0.3"
